--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <mat-sidenav-container>
+<mat-sidenav-container>
   <mat-sidenav-content>
       <mat-toolbar color="primary">
       <div fxFlex fxLayout fxLayoutAlign="left" fxHide.xs>
@@ -18,5 +18,4 @@
     </main>
   </mat-sidenav-content>
   
-</mat-sidenav-container> -->
-Sarawoot
+</mat-sidenav-container>
