--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
       </mat-toolbar>
       <mat-tab-group color="accent">
         <mat-tab label="Search"> <app-search></app-search></mat-tab>
-        <mat-tab label="Source"> <app-source></app-source></mat-tab>
+        <mat-tab label="Resource"> <app-source></app-source></mat-tab>
         <mat-tab label="About author"><app-info></app-info></mat-tab>
       </mat-tab-group>
     <main>
