--- a/src/app/search/search/search.component.html
+++ b/src/app/search/search/search.component.html
@@ -1,8 +1,9 @@
 
 <div>
     <mat-form-field>
-        <mat-label>UCI (e.g. 101999991 )</mat-label>
-        <input matInput>  
+        <mat-label>UCI (e.g. 1000 )</mat-label>
+        <input matInput type="text" id="compound"
+        name="compound">  
     </mat-form-field>
     <button mat-raised-button (click) = "onSearch()" color="primary">UCI Search</button>
 </div>
