--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 <mat-sidenav-container>
   <mat-sidenav-content>
-      <mat-toolbar color="primary">
-      <div fxFlex fxLayout fxLayoutAlign="left" fxHide.xs>
+      <mat-toolbar>
+      <div>
         <a mat-menu-item>
-        <mat-icon class="icon">note_add</mat-icon>
         <span class="label">Drug repositioning </span>
         </a>
       </div>
