--- a/src/app/search/search/search.component.html
+++ b/src/app/search/search/search.component.html
@@ -5,7 +5,7 @@
         <input matInput type="text" id="compound"
         name="compound">  
     </mat-form-field>
-    <button mat-raised-button (click) = "onSearch()" color="primary">UCI Search</button>
+    <button mat-raised-button class ="custom_button" (click) = "onSearch()">UCI Search</button>
 </div>
 <div>
     <mat-card>
